# rpicam-slim

./: explicit-timeout.yaml  meson.build  meson_options.txt
apps/: meson.build  rpicam_chessboard.cpp
core/: meson.build  options.cpp  options.hpp  rpicam_app.cpp  rpicam_app.hpp  version.cpp.in
encoder/: chessboard_filter_encoder.cpp  chessboard_filter_encoder.hpp  libav_encoder.cpp  meson.build
preview/: meson.build  preview.cpp
