option('enable_drm',
        type : 'feature',
        value : 'auto',
        description : 'Enable DRM preview window support')

option('enable_egl',
        type : 'feature',
        value : 'auto',
        description : 'Enable EGL preview window support')

option('enable_opencv',
        type : 'feature',
        value : 'disabled',
        description : 'Enable OpenCV postprocessing support')

option('neon_flags',
        type : 'combo',
        choices: ['arm64', 'armv8-neon', 'auto'],
        value : 'auto',
        description : 'User selectable arm-neon optimisation flags')

